text overflow fix

--- a/resources/js/assets/sass/app.scss
+++ b/resources/js/assets/sass/app.scss
@@ -20,6 +20,11 @@ body {
     background-color: #F5F7FB;
 }
 
+.modal-header {
+    overflow-x: hidden;
+    overflow-wrap: break-word;
+}
+
 .table-card {
     border: 0;
     border-radius: 20px;
