--- a/resources/js/assets/sass/note-card.scss
+++ b/resources/js/assets/sass/note-card.scss
@@ -14,10 +14,11 @@
     }
 
     & > .card-body {
-        max-height: 20vh;
+        max-height: 140px;
         & > .card-title {
             font-size: 1.2em;
             overflow: hidden;
+            overflow-wrap: break-word;
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
@@ -25,6 +26,7 @@
         & > .note-card-content {
             overflow: hidden;
             display: -webkit-box;
+            overflow-wrap: break-word;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
         }
